--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         <h2>Nasi kucharze</h2>
         <div class="maklowicz">
             <img src="img/maklowicz.jpg" width="200px" height="200px">
-            <p>test</p>
-            <img src="" width="200px" height="200px">
-            <p>test</p>
+            <img src="img/howno.jpg" width="200px" height="200px">
             <img src="img/gordon.jpg" width="200px" height="200px">
-            <p>test</p>
         </div>
     </div>
 </body>
